# vigenere

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/c/: alphabet_util.c  entry_point.c  frequency.c  key.c  vigenere.c
src/include/: alphabet_util.h  error_codes.h  frequency.h  key.h  macro.h  vigenere.h
utest/: CMakeLists.txt
utest/c/: test_util.h  utest_alphabet.c  utest_frequency.c  utest_key.c  utest_vigenere.c
utest/resource/: novel_freq_blob.txt
